--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = "0.1.0.dev0" %}
-{% set commit = "0086007c3f588e77c9b8ce8e071fee686ffc6b72" %}
+{% set version = "0.2.0" %}
+{% set commit = "v0.2.0" %}
 
 package:
   name: symengine
@@ -8,7 +8,7 @@ package:
 source:
   fn: {{ commit }}.tar.gz
   url: https://github.com/symengine/symengine/archive/{{ commit }}.tar.gz
-  sha256: 98a7f11e6ed5796394910cf118dca9f7a812caaac4ddb6b990ef84db9b8acbe2
+  sha256: 64d050b0b9decd12bf4ea3b7d18d3904dd7cb8baaae9fbac1b8068e3c59709be
 
 build:
   number: 0
