--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 64d050b0b9decd12bf4ea3b7d18d3904dd7cb8baaae9fbac1b8068e3c59709be
 
 build:
-  number: 0
+  number: 1
   skip: true        # [win and not py35]
   features:
     - vc14          # [win and py35]
@@ -45,6 +45,7 @@ test:
 about:
   home: https://github.com/symengine/symengine
   license: MIT
+  license_file: LICENSE
   summary: 'SymEngine is a fast symbolic manipulation library, written in C++'
 
 extra:
