[ci skip] Pin toolchain

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ build:
 
 requirements:
   build:
-    - toolchain     # [unix]
+    - toolchain 2.0.0    # [unix]
     - cmake
     - gmp           # [unix]
     - mpfr          # [unix]
