--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,11 @@ source:
   fn: v{{ version }}.tar.gz
   url: https://github.com/symengine/symengine/archive/v{{ version }}.tar.gz
   sha256: 591463cb9e741d59f6dfd39a7943e3865d3afe9eac47d1a9cbf5ca74b9c49476
+  patches:
+    - gcc7.patch
 
 build:
-  number: 1002
+  number: 1003
   skip: True  # [win and vc<14]
 
 requirements:
