--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,13 +1,11 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-build_number_decrement:
-- '0'
 c_compiler:
 - clang
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - clangxx
 gmp:
@@ -23,9 +21,3 @@ pin_run_as_build:
     max_pin: x
   mpfr:
     max_pin: x
-zip_keys:
-- - c_compiler
-  - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
