--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,13 +16,14 @@ build:
 requirements:
   build:
     - cmake
+    - make
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
     - gmp              # [unix]
     - mpfr
     - mpc
-    - mpir 3.*         # [win]
+    - mpir             # [win]
     - llvmdev
     - libflint         # [unix]
   run:
