--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,8 @@ build:
 requirements:
   build:
     - cmake
-    - make
+    - make             # [unix]
+    - ninja            # [win]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
