--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = "0.5.0" %}
+{% set maj_min = ".".join(version.split(".")[:2]) %}
 
 package:
   name: symengine
@@ -38,7 +39,7 @@ test:
   commands:
     - if not exist %LIBRARY_INC%\\symengine\\basic.h exit 1     # [win]
     - if not exist %LIBRARY_LIB%\\symengine.lib exit 1          # [win]
-    - if not exist %LIBRARY_BIN%\\symengine.dll exit 1          # [win]
+    - if not exist %LIBRARY_BIN%\\symengine-{{ maj_min }}.dll exit 1          # [win]
     - test -f $PREFIX/include/symengine/basic.h                 # [unix]
     - test -f $PREFIX/lib/libsymengine.so                       # [linux]
     - test -f $PREFIX/lib/libsymengine.dylib                    # [osx]
