Use LLVM 8 on win

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,15 +19,15 @@ requirements:
     - cmake
     - make             # [unix]
     - ninja            # [win]
-    - {{ compiler('c') }}     # [unix]
-    - {{ compiler('cxx') }}   # [unix]
-    - vs2017_{{ target_platform }}   # [win]
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
   host:
     - gmp              # [unix]
     - mpfr
     - mpc
     - mpir             # [win]
-    - llvmdev
+    - llvmdev          # [unix]
+    - llvmdev  8.*     # [win]
     - libflint         # [unix]
   run:
     - gmp              # [unix]
