--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ source:
   fn: v{{ version }}.tar.gz
   url: https://github.com/symengine/symengine/releases/download/v{{ version }}/symengine-{{ version }}.tar.gz
   sha256: ebe71d3c42661d12fa991040097ff383e193006af4e76d1adaabb8cee45cf94c
+  patches:
+    - msvc-2017.diff
 
 build:
   number: 0
