--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: f6972acd6a65354f6414e69460d2e175729470632bdac05919bc2f7f32e48cbd
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win and vc<14]
 
 requirements:
@@ -25,9 +25,11 @@ requirements:
     - mpir             # [win]
     - mpfr
     - mpc
-    - llvmdev <17
-    - zlib
     - libflint
+    - llvmdev <17
+    # these two come from LLVM
+    - zstd
+    - zlib
   run:
     - gmp              # [unix]
     - mpir             # [win]
