--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.11.2" %}
+{% set version = "0.12.0" %}
 {% set maj_min = ".".join(version.split(".")[:2]) %}
 
 package:
@@ -7,11 +7,11 @@ package:
 
 source:
   url: https://github.com/symengine/symengine/releases/download/v{{ version }}/symengine-{{ version }}.tar.gz
-  sha256: f6972acd6a65354f6414e69460d2e175729470632bdac05919bc2f7f32e48cbd
+  sha256: 1b5c3b0bc6a9f187635f93585649f24a18e9c7f2167cebcd885edeaaf211d956
 
 build:
-  number: 1
-  skip: true  # [win and vc<14]
+  number: 0
+  skip: true  # [win]
 
 requirements:
   build:
@@ -20,6 +20,7 @@ requirements:
     - ninja            # [win]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - {{ stdlib("c") }}
   host:
     - gmp              # [unix]
     - mpir             # [win]
