--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
   sha256: f6972acd6a65354f6414e69460d2e175729470632bdac05919bc2f7f32e48cbd
 
 build:
-  number: 1
-  skip: true  # [win and vc<14]
+  number: 2
+  skip: true  # [win]
 
 requirements:
   build:
