--- a/.ci_support/osx_64_.yaml
+++ b/.ci_support/osx_64_.yaml
@@ -1,11 +1,15 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+- '10.13'
 MACOSX_SDK_VERSION:
-- '10.12'
+- '10.13'
 c_compiler:
 - clang
 c_compiler_version:
 - '16'
+c_stdlib:
+- macosx_deployment_target
+c_stdlib_version:
+- '10.13'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -28,6 +32,6 @@ zip_keys:
 - - c_compiler_version
   - cxx_compiler_version
 zlib:
-- '1.2'
+- '1'
 zstd:
 - '1.5'
