--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,9 @@ source:
     - fmpz_gmp.patch
 
 build:
-  number: 1
+  number: 2
+  run_exports:
+    - {{ pin_subpackage("symengine", max_pin="x.x") }}
 
 requirements:
   build:
